Bug 56308 - TabletPC can get stuck in "drag mode" when bringing pen into proximity
Summary: TabletPC can get stuck in "drag mode" when bringing pen into proximity
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/wacom (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-23 01:02 UTC by Jason Gerecke
Modified: 2012-10-26 22:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jason Gerecke 2012-10-23 01:02:49 UTC
On multitouch display tablets (some tablet PCs, Cintiq 24HD touch), the driver can cause button 1 to get "stuck down" when bringing the pen in proximity. This is most noticeable when bringing the pen into proximity and resting the gripping hand on the display.

This can be easily replicated by touching two fingers to the display and then bringing the pen into proximity. As long as no gesture was performed, the button gets stuck. The only way to release the button is to touch a finger to the display with the pen out of proximity.

While the driver appears to properly release button 1 upon starting a drag or zoom gesture, it apparently leaves the button depressed while waiting for one of them to being (that is, while in GESTURE_LAG_MODE). Oddly, my attempts to force the driver to release the button upon the transition to 2-finger GESTURE_LAG_MODE have so far been fruitless.
Comment 1 Jason Gerecke 2012-10-26 22:59:38 UTC
commit 97358d0effeb4b72af095cb67d12881286f6fb04
Author: Jason Gerecke <killertofu@gmail.com>
Date:   Tue Oct 23 10:20:17 2012 -0700

    Have direct-touch devices move into and out of GESTURE_DRAG_MODE


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.