Have direct-touch devices move into and out of GESTURE_DRAG_MODE

Direct-touch devices (e.g. tablet PC, 24HD touch) are currently left in
GESTURE_NONE_MODE while performing drags. This can lead to potential
"stuck button" issues, since as soon as a second finger comes in
contact, the driver will switch to GESTURE_LAG_MODE. This prevents the
wcmSingleFingerPress function from being called, leaving button 1 in a
pressed state. While any subsuquent gesture will release button 1, if
the pen is brought into proximity before one occurs, the fingers will be
sent out of proximity without a chance to release button 1. This causes
the button to remain "stuck" in the pressed state until the next touch
occurs.

There are a few different ways this issue could be addressed. In the
interest of symmetry with indirect-touch devices, this patch has
direct-touch devices enter and exit GESTURE_DRAG_MODE as well. This
delays the mode swith to GESTURE_LAG_MODE by one event, allowing
wcmSingleFingerPress to be called to release button 1.

https://bugs.freedesktop.org/show_bug.cgi?id=56308

Signed-off-by: Jason Gerecke <killertofu@gmail.com>
Reviewed-by: Ping Cheng <pinglinux@gmail.com>